Refactor to use int x,y instead of Point for Rover Position. Controller responsible for determining move